src/test/deca/context/invalid/while-expressionsArith.context
while-expressionsArith.deca:2: